--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,6 +79,8 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  --custom-primary: #7ed0ff;
+  --custom-font-primary: #1d1d28;
 }
 
 .dark {
