update dashboard admin directory structure

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,12 +32,13 @@
   --color-accent: var(--accent);
   --color-muted-foreground: var(--muted-foreground);
   --color-muted: var(--muted);
-  --color-deep-blue-gray: var(--deep-blue-gray);  
-  --color-light-orange: var(--light-orange);  
+  --color-deep-blue-gray: var(--deep-blue-gray);
+  --color-light-orange: var(--light-orange);
   --color-secondary-foreground: var(--secondary-foreground);
   --color-secondary: var(--secondary);
   --color-primary-foreground: var(--primary-foreground);
   --color-primary: var(--primary);
+  --color-dashboard-primary: var(--dashboard-primary);
   --color-popover-foreground: var(--popover-foreground);
   --color-popover: var(--popover);
   --color-card-foreground: var(--card-foreground);
@@ -56,6 +57,7 @@
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.145 0 0);
   --primary: oklch(82.27% 0.1041 235.12);
+  --dashboard-primary: oklch(57.75% 0.1614 250.19);
   --primary-foreground: oklch(0.985 0 0);
   --secondary: oklch(0.97 0 0);
   --secondary-foreground: oklch(0.205 0 0);
@@ -94,6 +96,7 @@
   --popover: oklch(0.145 0 0);
   --popover-foreground: oklch(0.985 0 0);
   --primary: oklch(0.985 0 0);
+  --dashboard-primary: oklch(57.75% 0.1614 250.19);
   --primary-foreground: oklch(0.205 0 0);
   --secondary: oklch(0.269 0 0);
   --secondary-foreground: oklch(0.985 0 0);
