--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,7 @@
   --font-mono: var(--font-geist-mono);
   --font-noto-sans: var(--font-noto-sans-display);
   --color-sidebar-ring: var(--sidebar-ring);
+  --color-sidebar-background: var(--sidebar-background);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-accent: var(--sidebar-accent);
@@ -76,10 +77,12 @@
   --chart-4: oklch(0.828 0.189 84.429);
   --chart-5: oklch(0.769 0.188 70.08);
   --radius: 0.625rem;
-  --sidebar: oklch(0.985 0 0);
+  --sidebar-background: oklch(0.769 0.188 70.08);
+  --sidebar: var(--deep-blue-gray);
+  --sidebar-color: oklch(100% 0 0);
   --sidebar-foreground: oklch(0.145 0 0);
   --sidebar-primary: oklch(0.205 0 0);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
+  --sidebar-primary-foreground: var(--deep-blue-gray);
   --sidebar-accent: oklch(0.97 0 0);
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
@@ -115,6 +118,8 @@
   --chart-4: oklch(0.627 0.265 303.9);
   --chart-5: oklch(0.645 0.246 16.439);
   --sidebar: oklch(0.205 0 0);
+  --sidebar-color: var(--deep-blue-gray);
+  --sidebar-background: 0 0% 98%;
   --sidebar-foreground: oklch(0.985 0 0);
   --sidebar-primary: oklch(0.488 0.243 264.376);
   --sidebar-primary-foreground: oklch(0.985 0 0);
