--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,6 +48,7 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+  --default-font-family: var(--font-noto-sans-display);
 }
 
 :root {
@@ -78,8 +79,8 @@
   --chart-5: oklch(0.769 0.188 70.08);
   --radius: 0.625rem;
   --sidebar-background: oklch(0.769 0.188 70.08);
-  --sidebar: var(--deep-blue-gray);
-  --sidebar-color: oklch(100% 0 0);
+  --sidebar: var(--deep-blue-gray); /* background */
+  --sidebar-color: oklch(100% 0 0); /* text color */
   --sidebar-foreground: oklch(0.145 0 0);
   --sidebar-primary: oklch(0.205 0 0);
   --sidebar-primary-foreground: var(--deep-blue-gray);
@@ -89,6 +90,7 @@
   --sidebar-ring: oklch(0.708 0 0);
   --deep-blue-gray: oklch(23.59% 0.021 284.67);
   --light-orange: oklch(89% 0.0913 75.83);
+  --default-font-family: (noto);
 }
 
 .dark {
