feat(dashboard):  card style component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -139,3 +139,20 @@
     @apply bg-background text-foreground;
   }
 }
+
+.dashboard-general-style-controller {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 40px; /* 10 * 0.25rem (based on Tailwind's default spacing scale) */
+  padding-left: 11px;
+  padding-right: 11px;
+  border: 1px solid oklch(0.928 0.006 264.531); /* Tailwind's gray-300 color */
+  border-radius: 0.25rem; /* Tailwind's rounded-sm */
+  margin-bottom: 14px;
+  font-size: 13px;
+  font-weight: 400;
+}
+.dashboard-general-style-controller:hover {
+  background-color: #fafafa;
+}
