--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -140,6 +140,12 @@
   }
 }
 
+html,
+body {
+  max-height: 100%;
+  overflow: hidden;
+}
+
 .dashboard-general-style-controller {
   display: flex;
   align-items: center;
