--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -140,6 +140,14 @@
   }
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus {
+  -webkit-box-shadow: 0 0 0px 1000px white inset !important;
+  box-shadow: 0 0 0px 1000px white inset !important;
+  -webkit-text-fill-color: currentColor !important;
+}
+
 html,
 body {
   max-height: 100%;
