--- a/src/app/[locale]/(protected)/dashboard/admin/profile/links/components/LinkViewer/style.css
+++ b/src/app/[locale]/(protected)/dashboard/admin/profile/links/components/LinkViewer/style.css
@@ -1,4 +1,5 @@
 .link-viewer::-webkit-scrollbar {
+  display: none;
   width: 8px; /* Set the width of the scrollbar */
 }
 
@@ -13,4 +14,15 @@
 
 .link-viewer::-webkit-scrollbar-thumb:hover {
   background-color: #555; /* Darken the thumb color on hover */
+}
+
+/* Hide scrollbar in WebKit (Chrome, Safari) */
+.link-viewer::-webkit-scrollbar {
+  display: none;
+}
+
+/* Optional: for Firefox */
+.link-viewer {
+  scrollbar-width: none !important; /* Firefox */
+  -ms-overflow-style: none !important;  /* IE and Edge */
 }
